--- a/README
+++ b/README
@@ -1,36 +1,24 @@
-To initialize get started with Android/CyanogenMod, you'll need to get
+To initialize get started with Galaxy-Sense, you'll need to get
 familiar with Git and Repo. 
 
 http://source.android.com/download/using-repo
 
-To initialize your local repository using the CyanogenMod trees, 
+To initialize your local repository using the CyanogenMod/Galaxy-Sense trees, 
 use a command like this:
 
-repo init -u git://github.com/cyanogen/android.git -b eclair
+repo init -u git://github.com/Chiledog/android.git -b gingerbread
 
 Then to sync up:
 
 repo sync
 
 
-After checking out the repositories, you'll need to create a
-buildspec.mk file with contents like this (for dream/sapphire):
+Then check the code and 
 
-TARGET_PRODUCT:=cyanogen_dream_sapphire_us
-TARGET_BUILD_VARIANT:=eng
-TARGET_BUILD_TYPE:=release
+./build.sh <device> 
 
+i.e.
 
-If you are building for the HTC Passion/Nexus One:
-
-TARGET_PRODUCT:=cyanogen_passion
-TARGET_BUILD_VARIANT:=eng
-TARGET_BUILD_TYPE:=release
-
-
-For additional instructions on getting the necessary proprietary
-files into your build, and to get things going from here:
-
-http://source.android.com/documentation/building-for-dream
+./build.sh galaxys
 
 
